--- a/.env
+++ b/.env
@@ -4,9 +4,9 @@ DB_NAME="effective_mobile"
 DB_PORT="5432"
 DB_HOST="localhost"
 DB_SSLMODE="disable"
-API_PORT=":8080"
+
 
 GOOSE_DRIVER=postgres
-GOOSE_DBSTRING=postgres://em_user:effectivemobile@localhost:5432/effective_mobile?sslmode=disable
+# GOOSE_DBSTRING=postgres://em_user:effectivemobile@localhost:5432/effective_mobile?sslmode=disable
 GOOSE_MIGRATION_DIR=./db/migrations
 
